--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               SOOT
-version:            0.01
+version:            0.02
 abstract:           Use ROOT from Perl
 author:
     - Steffen Mueller <smueller@cpan.org>
@@ -11,7 +11,9 @@ configure_requires:
 build_requires:
     ExtUtils::MakeMaker:  0
 requires:
-    ExtUtils::XSpp:  0.07
+    Data::Dumper:        0
+    ExtUtils::Constant:  0
+    ExtUtils::XSpp:      0.07
 no_index:
     directory:
         - t
