--- a/META.yml
+++ b/META.yml
@@ -13,18 +13,30 @@ build_requires:
 configure_requires:
   Module::Build: 0.36
 dynamic_config: 1
-generated_by: 'Module::Build version 0.3603'
+generated_by: 'Module::Build version 0.3607'
 license: gpl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: SOOT
+no_index:
+  directory:
+    - buildtools
+    - src
+    - t
+    - ROOT_XSP
+    - xt
+    - XS
+    - inc
+    - examples
 provides:
   SOOT:
     file: lib/SOOT.pm
-    version: 0.07
+    version: 0.08
   SOOT::API:
     file: lib/SOOT/API.pm
+  SOOT::Struct:
+    file: lib/SOOT/Struct.pm
   TArray:
     file: lib/TArray.pm
   TObject:
@@ -40,4 +52,4 @@ resources:
   bugtracker: http://rt.cpan.org/NoAuth/Bugs.html?Dist=SOOT
   license: http://www.opensource.org/licenses/gpl-2.0.php
   repository: git://github.com/tsee/SOOT.git
-version: 0.07
+version: 0.08
