--- a/META.yml
+++ b/META.yml
@@ -11,9 +11,10 @@ build_requires:
   File::Path: 0
   File::Spec: 0
 configure_requires:
-  Module::Build: 0.36
+  Alien::ROOT: v5.26.0.1
+  Module::Build: 0.3605
 dynamic_config: 1
-generated_by: 'Module::Build version 0.3607'
+generated_by: 'Module::Build version 0.3605'
 license: gpl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -32,7 +33,7 @@ no_index:
 provides:
   SOOT:
     file: lib/SOOT.pm
-    version: 0.08
+    version: 0.09
   SOOT::API:
     file: lib/SOOT/API.pm
   SOOT::Struct:
@@ -52,4 +53,4 @@ resources:
   bugtracker: http://rt.cpan.org/NoAuth/Bugs.html?Dist=SOOT
   license: http://www.opensource.org/licenses/gpl-2.0.php
   repository: git://github.com/tsee/SOOT.git
-version: 0.08
+version: 0.09
