--- a/META.yml
+++ b/META.yml
@@ -15,8 +15,8 @@ configure_requires:
   ExtUtils::CppGuess: 0.01
   Module::Build: 0.3605
 dynamic_config: 1
-generated_by: 'Module::Build version 0.3607'
-license: gpl
+generated_by: 'Module::Build version 0.38, CPAN::Meta::Converter version 2.110930'
+license: open_source
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
@@ -34,15 +34,19 @@ no_index:
 provides:
   SOOT:
     file: lib/SOOT.pm
-    version: 0.13
+    version: 0.14
   SOOT::API:
     file: lib/SOOT/API.pm
+    version: 0
   SOOT::Struct:
     file: lib/SOOT/Struct.pm
+    version: 0
   TArray:
     file: lib/TArray.pm
+    version: 0
   TObject:
     file: lib/TObject.pm
+    version: 0
 requires:
   Carp: 1.01
   Data::Dumper: 0
@@ -54,4 +58,4 @@ resources:
   bugtracker: http://rt.cpan.org/NoAuth/Bugs.html?Dist=SOOT
   license: http://www.opensource.org/licenses/gpl-2.0.php
   repository: git://github.com/tsee/SOOT.git
-version: 0.13
+version: 0.14
